--- a/angular.json
+++ b/angular.json
@@ -39,11 +39,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/legacy-ng-modules",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -93,12 +93,9 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
@@ -107,10 +104,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "legacy-ng-modules:build:production"
+              "buildTarget": "legacy-ng-modules:build:production"
             },
             "development": {
-              "browserTarget": "legacy-ng-modules:build:development"
+              "buildTarget": "legacy-ng-modules:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -118,7 +115,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "legacy-ng-modules:build"
+            "buildTarget": "legacy-ng-modules:build"
           }
         }
       }
